--- a/style.css
+++ b/style.css
@@ -943,15 +943,14 @@ button {
     }
 
 .inner {
-  width: 100%;
-  max-width: 75em;
+  /* max-width: 75em; */
   margin: 0 auto;
   padding: 0 2.5em;
   font-size: 20px;
 }
 .inner h1 {
   font-size: 40px;
-}
+}  
 
 .outer {
   padding: 0em 0 6em 0;
